# hoppy

./: .gitignore  AGENTS.md  HOPPY_LLM_USE.md  LICENSE  README.md  create_release.sh  pyproject.toml
.github/workflows/: ci.yml
src/hoppy/: __init__.py  analyzer.py  cli.py  installer.py  orchestrator.py  packer.py  reporting.py  sarif.py  slicing_rules.py
src/hoppy/compiler/: scala.py
src/hoppy/core/: cache.py  manager.py  manager.py_fragment  match.py  rule.py  slicing.py
src/hoppy/dsl/: patterns.py  query.py
src/hoppy/rules/: __init__.py  common.py  csharp.py  discovery.py  java.py  javascript.py  python.py
test_app/: args_test.py  auth.py  composition.py  context.py  edge_cases.py  express_destructure.js  field_test.py  main.py  metavars.py  repro_express.ts  repro_hof.ts  repro_sqli.ts  sanitizer.py  snippets.py  types_test.py  utils.py  webapp.py
test_app/express_router_mount/: app.js
test_app/express_router_mount/routers/: index.js
test_app/express_router_mount/routers/v1/: index.js  user.js
tests/: conftest.py
